# view-ray-patient-list

./: CMakeLists.txt
cpp/: client.cpp  main.cpp  patient_data.cpp  websocket.cpp
include/: client.h  patient_data.h  websocket.h
